feature(German HVDCs): Implement CNE export mechanism for German HVDCs (#1653)
* Handle HVDC RAs at pre-optim in Core CNE export

Signed-off-by: Vincent BOCHET <vincent.bochet@rte-france.com>

* Code refactoring to make pre-optim B56 generation look more similar to post-PRA and post-CRA B56 generation

Signed-off-by: Vincent BOCHET <vincent.bochet@rte-france.com>

* Finalize Core CNE export for HVDC german HVDCs

Signed-off-by: Vincent BOCHET <vincent.bochet@rte-france.com>

* Code review

Signed-off-by: Vincent BOCHET <vincent.bochet@rte-france.com>

* Refactoring of CoreCneRemedialActionsCreatorTest class

Signed-off-by: Vincent BOCHET <vincent.bochet@rte-france.com>

* Rename some methods

Signed-off-by: Vincent BOCHET <vincent.bochet@rte-france.com>

* Reorder methods in CoreCneRemedialActionsCreatorTest class

Signed-off-by: Vincent BOCHET <vincent.bochet@rte-france.com>

* Add unit tests for german HVDC RAs in Core CNE exporter

Signed-off-by: Vincent BOCHET <vincent.bochet@rte-france.com>

* Fix bug in InjectionRangeAction filtering

Signed-off-by: Vincent BOCHET <vincent.bochet@rte-france.com>

* Fix bug RegisteredResource elementName in Core CNE export

Signed-off-by: Vincent BOCHET <vincent.bochet@rte-france.com>

* Add Cucumber tests for Core CNE export

Signed-off-by: Vincent BOCHET <vincent.bochet@rte-france.com>

* Remove TODO

Signed-off-by: Vincent BOCHET <vincent.bochet@rte-france.com>

* Update Core CNE documentation page

Signed-off-by: Vincent BOCHET <vincent.bochet@rte-france.com>

* Add more final keyword

Signed-off-by: Vincent BOCHET <vincent.bochet@rte-france.com>

* Update VirtualHubs documentation page

Signed-off-by: Vincent BOCHET <vincent.bochet@rte-france.com>

* Update Flowbased Constraint CRAC documentation page

Signed-off-by: Vincent BOCHET <vincent.bochet@rte-france.com>

* Code review

Signed-off-by: Vincent BOCHET <vincent.bochet@rte-france.com>

* Rename added Cucumber test scenarii

Signed-off-by: Vincent BOCHET <vincent.boche